tests/parser/invalid/syntax_errors/test_missing_rparen.src
fn f() { if (x { y = 1; } }
